header-about section Done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,25 @@
   font-family: "Open Sans", sans-serif;
   margin: 0;
 }
+.text-primary {
+  color: #fd6e0a;
+}
+.btn-primary {
+  height: 64px;
+  border-radius: 5px;
+  background-color: #fd6e0a;
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  border: none;
+  padding: 18px 35px;
+}
+.header {
+  background-image: url("../images/header_bg.png"),
+    url("../images/developer.png");
+  background-repeat: no-repeat;
+  background-position: bottom right, left;
+}
 /* ---------header & navigation style------ */
 nav {
   display: flex;
@@ -10,6 +29,7 @@ nav {
 }
 nav ul {
   display: flex;
+  align-items: center;
 }
 nav ul li {
   list-style: none;
@@ -20,6 +40,95 @@ nav ul li {
   font-size: 45px;
 }
 
-.text-primary {
-  color: #fd6e0a;
+/* ---banner---- */
+
+.banner {
+  margin: 0px 200px;
+  display: flex;
+  align-items: center;
+}
+
+.banner-info {
+}
+.banner-info h3 {
+  font-weight: 800;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+.banner-info h1 {
+  font-weight: 800;
+  font-size: 65px;
+}
+.banner-info p {
+  color: #757575;
+  margin-bottom: 30px;
+}
+/* ---main-section-- */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* ----ababout-section--- */
+
+.about-section {
+  margin-top: 130px;
+  background-color: #fff8f3;
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+}
+.section-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 35px;
+}
+
+.about-section p {
+  font-size: 18px;
+  color: #757575;
+  margin-bottom: 30px;
+}
+.about-info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+}
+.about-info .info-item p {
+  font-weight: 700;
+  color: #000;
+}
+.about-info .info-item h3 {
+  color: #757575;
+}
+
+/* skill-section */
+
+.skill-section {
+  margin-top: 130px;
+}
+.skill-section > p {
+  color: #757575;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.skill-box {
+  display: flex;
+  justify-content: space-between;
+}
+.skill-item {
+  padding: 20px;
+
+  background-color: #fff;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  margin: 10px;
+}
+.skill-item img {
+}
+.skill-item h3 {
+  margin: 20px 0px;
+}
+.skill-item p {
+  color: #757575;
 }
